# Arduino-Playground

./: CMakeLists.txt  LICENSE  Notes.md  README.md  Uno R3.drawio  code.ino
.devcontainer/: devcontainer.json
Testing Parts/: button.cpp  buzzer.cpp  ldr.cpp  pump.cpp  temprature.cpp  watersensor.cpp  wifi.cpp
Tests/: Actuators.ino  I2C.ino  LCD.ino  Sensors.ino
code/: code.cpp  code.ino  homeplantygrower.cpp  iot_grower.cpp
include/: code.hpp  homeplantygrower.hpp  project.h  project.hpp  thingProperties.h
project/code/: project.cpp
project/include/: project.hpp
src/: UnoR3.ino  UnoR4.ino  Untitled Diagram.drawio  project.c  project.cpp  project.ino  project_cloud.ino
