cmake_minimum_required(VERSION 3.20)
project(project() VERSION 1.0 LANGUAGES C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
target_include_directories(lib PRIVATE include)
add_executable(programm src/project.cpp)
target_include_directories(project PRIVATE include)
target_link_libraries(project PRIVATE lib)
